--- a/configs/12_2017_baselines/retinanet_X-101-64x4d-FPN_1x.yaml
+++ b/configs/12_2017_baselines/retinanet_X-101-64x4d-FPN_1x.yaml
@@ -2,7 +2,7 @@ MODEL:
   TYPE: retinanet
   CONV_BODY: FPN.add_fpn_ResNet101_conv5_body
   NUM_CLASSES: 81
-NUM_GPUS: 8
+NUM_GPUS: 1
 SOLVER:
   WEIGHT_DECAY: 0.0001
   LR_POLICY: steps_with_decay
@@ -31,7 +31,7 @@ RETINANET:
   LOSS_GAMMA: 2.0
   LOSS_ALPHA: 0.25
 TRAIN:
-  WEIGHTS: https://s3-us-west-2.amazonaws.com/detectron/ImageNetPretrained/FBResNeXt/X-101-64x4d.pkl
+  WEIGHTS: https://dl.fbaipublicfiles.com/detectron/ImageNetPretrained/FBResNeXt/X-101-64x4d.pkl
   DATASETS: ('coco_2014_train', 'coco_2014_valminusminival')
   SCALES: (800,)
   MAX_SIZE: 1333
@@ -44,3 +44,5 @@ TEST:
   RPN_PRE_NMS_TOP_N: 10000  # Per FPN level
   RPN_POST_NMS_TOP_N: 2000
 OUTPUT_DIR: .
+VIS: False
+VIS_TH: 0.2
